# cplug

./: .gitignore  CMakeLists.txt  README.md  Session.vim  compile.sh  run.sh  test.c
plugin_api/: base
src/: cplug.c  test.c
